# fastapi_base_skeleton

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
fastapi-application/: alembic.ini  main.py
fastapi-application/alembic/: README  env.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: users.py
fastapi-application/api/api_v1/crud/: users.py
fastapi-application/core/: config.py
fastapi-application/core/models/: base.py  db_helper.py  user.py
fastapi-application/core/schemas/: user.py
